# CfHEE

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
apps/backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  scope-check.err
apps/backend/fixtures/: retrieval_regression_cases.json  semantic_regression_documents.json
apps/backend/scripts/: retrieval_regression_check.py  semantic_regression_verify.py
apps/backend/sql/: schema.sql
apps/backend/src/cfhee_backend/: __init__.py  context_builder.py  main.py
apps/backend/src/cfhee_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/backend/src/cfhee_backend/answers/: __init__.py  base.py  context_builder.py  deterministic_provider.py  language.py  models.py  ollama_provider.py  prompt_builder.py  service.py
apps/backend/src/cfhee_backend/api/: __init__.py  answer_routes.py  document_routes.py  ops_routes.py  query_log_routes.py  retrieval_routes.py  routes.py  scope_routes.py
apps/backend/src/cfhee_backend/chunking/: __init__.py  service.py
apps/backend/src/cfhee_backend/embeddings/: __init__.py  base.py  hash_embedding.py  ollama_embedding.py
apps/backend/src/cfhee_backend/enrichment/: __init__.py
apps/backend/src/cfhee_backend/evaluation/: __init__.py  evaluator.py
apps/backend/src/cfhee_backend/ingestion/: __init__.py  models.py  service.py
apps/backend/src/cfhee_backend/llm/: __init__.py
apps/backend/src/cfhee_backend/normalization/: __init__.py
apps/backend/src/cfhee_backend/ops/: __init__.py  runtime_summary.py
docs/: API_V1.md  MVP.md  (+19 more)
(+58 files in other folders)
