[project]
name = "cfhee-backend"
version = "0.1.0"
description = "Backend for Copilot for Hostile Enterprise Environment"
requires-python = ">=3.12"
dependencies = [
  "chromadb>=1.0,<2.0",
  "fastapi>=0.116,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
